# starterCode

./: CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  fbMain.cpp  handleGraphicsArgs.cpp  vec3.h
utests/: CMakeLists.txt  utest_vec3.cpp
